--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="image">
     <script type="text/javascript" src="./script.js">
 </script>
 
